Fixed slide overflow

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -79,6 +79,7 @@ hr.page-separator
 
 .page
 {
+  position: relative;
   display: flex;
   max-width: 100vw;
   height: 100vh;
@@ -150,12 +151,14 @@ hr.page-separator
 
 .slide
 {
-  width: 100vw;
-  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-position: 10%;
   background-repeat: no-repeat;
   background-size: cover;
-  //display: block;
 }
 
 /* Apply this style to any element that has both the class "slideshow" and "fadein". */
